Bug 476071 - Kate incorrectly advises the user a file has been deleted on disk.
Summary: Kate incorrectly advises the user a file has been deleted on disk.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-25 04:14 UTC by Justin Zobel
Modified: 2024-09-13 19:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2023-10-25 04:14:32 UTC
STEPS TO REPRODUCE
1. Open a file in Kate
2. Move it somewhere else on the file system

OBSERVED RESULT
Kate says the file has been deleted

EXPECTED RESULT
Kate advises the file cannot be found, perhaps it has been moved or deleted
Comment 1 Christoph Cullmann 2023-12-18 19:13:09 UTC
Ok, that is true, we could use some better wording in that case.
Comment 2 Christoph Cullmann 2024-09-13 19:28:11 UTC
Git commit b913a3e01ed5fa33f05e869177da1476bac0b9b1 by Christoph Cullmann.
Committed on 13/09/2024 at 19:28.
Pushed by cullmann into branch 'master'.

add hint the file might got moved

we don't know for sure it was deleted

M  +1    -1    src/document/katedocument.cpp
M  +1    -1    src/include/ktexteditor/document.h

https://invent.kde.org/frameworks/ktexteditor/-/commit/b913a3e01ed5fa33f05e869177da1476bac0b9b1