add hint the file might got moved

we don't know for sure it was deleted

BUG: 476071